--- a/aboutme.html
+++ b/aboutme.html
@@ -25,59 +25,27 @@
         <hr class="aboutme-divider">
       </div>
     </section>
+
     <section class="consultation-section">
       <div class="section-content">
-        <h2 style="text-align:center;">My Journey</h2>
-        <p>
-          After completing my Bachelor’s in Homeopathy Medicine—a 5.5-year program at North Gujarat University in Vadodara, India—I began my career with an internship under an experienced doctor, where I gained hands-on experience in case-taking, follow-ups, and prescription management.
+        <h2 style="text-align:center; color: var(--color-pink); font-size: 1.8rem; margin-bottom: 1.5rem;">My Journey</h2>
+        <p style="line-height: 1.8; color: var(--color-text);">
+          After completing my Bachelor's in Homeopathy Medicine—a 5.5-year program at North Gujarat University in Vadodara, India—I began my career with an internship under an experienced doctor, where I gained hands-on experience in case-taking, follow-ups, and prescription management.
         </p>
-        <p>
+        <p style="line-height: 1.8; color: var(--color-text);">
           Following my internship, I opened my own clinic in Vadodara, running it for a year before relocating to Pune, where I continued to serve the community as a trusted family doctor. Over the years, I have successfully treated a wide range of acute and chronic conditions, including eczema, asthma, arthritis, allergies, autoimmune disorders, behavioral challenges in children, and psychiatric issues, using holistic homeopathic remedies.
         </p>
-        <p>
+        <p style="line-height: 1.8; color: var(--color-text);">
           In 2017, I moved to the Netherlands, where I validated my diploma with Nuffic, registered with CAT and NVKH, and attained an A2 Dutch language diploma, progressing to B1-level classes. I also registered my practice with the Chamber of Commerce (KvK).
         </p>
       </div>
     </section>
+
     <section class="consultation-section">
-      <div class="section-content">
-        <h2 style="text-align:center;">Social Contribution</h2>
-        <p>
-          In addition to my clinical work, I am actively involved in the community through social service initiatives. I volunteer with organizations - Stichting Sanskriti, Sanskar, and Uithoorn Voor Elkaar, where I contribute to health-focused events and outreach. Through regular involvement in Dutch working groups for classical homeopathy, I share insights from my Indian background and experience, contributing to the wider professional community.
-        </p>
-        <p>
-          My patients often commend my thorough, understanding, and compassionate approach, with elderly patients in particular appreciating my empathy and patience. I also volunteer weekly at Het Hoge Heem, an old age home in Uithoorn, where I assist elderly residents in spending meaningful, fulfilling days.
-        </p>
-      </div>
-    </section>
-    <section class="consultation-section">
-      <div class="section-content">
-        <h2 style="text-align:center;">Women's Health and Hormonal Problems</h2>
-        <p>
-          In today’s fast-paced world, where women juggle responsibilities across family, work, and social life, it’s easy to overlook the importance of hormonal health. Yet, hormonal balance is crucial for overall well-being.
-        </p>
-        <p>
-          I led an insightful session in <a href="https://www.facebook.com/hashtag/uithoorn" target="_blank">#Uithoorn</a>, organized by <a href="https://www.facebook.com/UithoornVoorElkaar" target="_blank">Uithoorn voor Elkaar</a> and <a href="https://www.facebook.com/profile.php?id=100085513882519" target="_blank">Stichting Sanskriti Aur Sanskar</a>, where I highlighted the often-overlooked connection between hormonal health and women’s daily lives. The event, held at Vrouwen Middag, brought together women from diverse backgrounds for an interactive and informative discussion.
-        </p>
-      </div>
-    </section>
-    <section class="consultation-section">
-      <div class="section-content">
-        <h2 style="text-align:center;">India Day, Uithoorn</h2>
-        <p>
-          On 23rd November 2024, <a href="https://www.facebook.com/profile.php?id=100085513882519" target="_blank">Stichting Sanskriti Aur Sanskar</a> and <a href="https://www.facebook.com/hethogeheem" target="_blank">Amstelring Het Hoge Heem</a> came together to celebrate a truly memorable India Day at Het Hoge Heem, Uithoorn.
-        </p>
-        <p>
-          Being part of both organizations provided me the unique privilege to bridge Indian and Dutch cultures, bringing people, traditions, and cuisine together in harmony. While visiting Het Hoge Heem is always a fulfilling experience, India Day was truly extraordinary.
-        </p>
-      </div>
-    </section>
-    <section class="consultation-section">
-      <div class="section-content">
-        <h2 style="text-align:center;">Volunteer at Het Hoge Heem</h2>
-        <p>
-          Providing my services at old age home in Uithoorn is always a satisfying and fulfilling experience.
-        </p>
+      <div class="section-content" style="text-align: center;">
+        <h2 style="color: var(--color-pink); font-size: 1.5rem; margin-bottom: 1rem;">Social Contributions</h2>
+        <p style="color: var(--color-muted); margin-bottom: 1.5rem;">Learn more about my community service and outreach initiatives.</p>
+        <a href="social-contribution.html" class="button primary">Explore</a>
       </div>
     </section>
   </main>
