--- a/header.html
+++ b/header.html
@@ -10,11 +10,11 @@
       <ul>
         <li><a href="index.html" data-page="index">Consultation</a></li>
         <li><a href="homoeopathy.html" data-page="homoeopathy">Homoeopathy</a></li>
-          <li><a href="aboutme.html" data-page="about-me">About me</a></li>
-        <li><a href="#faq" data-page="faq">FAQ</a></li>
-        <li><a href="#articles" data-page="articles">Articles</a></li>
-        <li><a href="#trainings" data-page="trainings">Trainings</a></li>
-        <li><a href="#sessions" data-page="sessions">Sessions</a></li>
+        <li><a href="aboutme.html" data-page="about-me">About me</a></li>
+        <li><a href="./faq.html" data-page="faq">FAQ</a></li>
+        <li><a href="./articles.html" data-page="articles">Articles</a></li>
+        <li><a href="./trainings.html" data-page="trainings">Trainings</a></li>
+        <li><a href="./sessions.html" data-page="sessions">Sessions</a></li>
         <li><a href="#privacy-statement" data-page="privacy-statement">Privacy Statement</a></li>
       </ul>
     </nav>
