--- a/private.html
+++ b/private.html
@@ -64,15 +64,13 @@
   <script>
     // Firebase config with Auth only (no sensitive keys exposed here).
     // The API key is safe to expose; all sensitive logic happens server-side.
+   // Minimal Firebase config required for client-side Auth
+   // Keep only public, non-secret fields the SDK needs to initialize
    const firebaseConfig = {
-  apiKey: "AIzaSyBiJTEwXvkEB-TLF_9EuJeGdwmf1rSvS-w",
-  authDomain: "poojawebsite-53749.firebaseapp.com",
-  projectId: "poojawebsite-53749",
-  storageBucket: "poojawebsite-53749.firebasestorage.app",
-  messagingSenderId: "625704523500",
-  appId: "1:625704523500:web:6906560fe64f0db5d777c9",
-  measurementId: "G-VX6PM2DW1S"
-};
+    apiKey: "AIzaSyBiJTEwXvkEB-TLF_9EuJeGdwmf1rSvS-w",
+    authDomain: "poojawebsite-53749.firebaseapp.com",
+    projectId: "poojawebsite-53749",
+  };
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
@@ -115,19 +113,29 @@
         return;
       }
 
-      if (!data.content || data.content.length === 0) {
-        contentListEl.innerHTML = '<p>No content available to you at this time.</p>';
-        return;
+      const { books = [], articles = [], videos = [] } = data.content || {};
+      let html = '';
+
+      if (books.length > 0) {
+        html += '<h4>Books</h4><ul>' + books.map(book =>
+          `<li><a href="/private/books/${encodeURIComponent(book)}" target="_blank">${book}</a></li>`
+        ).join('') + '</ul>';
+      }
+      if (articles.length > 0) {
+        html += '<h4>Articles</h4><ul>' + articles.map(article =>
+          `<li><a href="/private/articles/${encodeURIComponent(article)}" target="_blank">${article}</a></li>`
+        ).join('') + '</ul>';
+      }
+      if (videos.length > 0) {
+        html += '<h4>Videos</h4><ul>' + videos.map(video =>
+          `<li><a href="${video.startsWith('http') ? video : '/private/videos/' + encodeURIComponent(video)}" target="_blank">${video}</a></li>`
+        ).join('') + '</ul>';
       }
 
-      contentListEl.innerHTML = data.content.map(item => `
-        <div class="content-item">
-          <h4>${item.title}</h4>
-          <p>${item.description || 'No description'}</p>
-          <div class="status allowed">✓ Available</div>
-          <a href="${item.link}" target="_blank">Access ${item.type}</a>
-        </div>
-      `).join('');
+      if (!html) {
+        html = '<p>No content available to you at this time.</p>';
+      }
+      contentListEl.innerHTML = html;
     };
 
     const updateUI = (user, data) => {
